# gnome-disk-utility

./: HACKING  INSTALL  NEWS  README.md  TODO  mate-disk-utility.doap  meson.build  meson_options.txt
data/: mate-disk-image-mounter.desktop.in  mate-disk-image-writer.desktop.in  meson.build  org.gnome.Disks.gschema.xml  org.mate.DiskUtility.appdata.xml.in  org.mate.DiskUtility.desktop.in  org.mate.DiskUtility.service.in  org.mate.Disks.gschema.xml
doc/man/: mate-disk-image-mounter.xml  mate-disks.xml  meson.build
flatpak/: org.mate.DiskUtility.json
po/: POTFILES.in
src/disk-image-mounter/: main.c  meson.build
src/disks/: gduapplication.c  gdubenchmarkdialog.c  gducreateformatdialog.c  gduvolumegrid.c  gduwindow.c  main.c  meson.build
src/disks/ui/: about-dialog.ui  benchmark-dialog.ui  change-passphrase-dialog.ui  create-confirm-page.ui  create-disk-image-dialog.ui  create-filesystem-page.ui  create-format.ui  create-other-page.ui  create-partition-page.ui  create-password-page.ui  edit-crypttab-dialog.ui  edit-dos-partition-dialog.ui  edit-filesystem-dialog.ui  edit-fstab-dialog.ui  edit-gpt-partition-dialog.ui  edit-partition-dialog.ui  erase-multiple-disks-dialog.ui  format-disk-dialog.ui  gdu.css  new-disk-image-dialog.ui  resize-dialog.ui  restore-disk-image-dialog.ui  smart-dialog.ui  unlock-device-dialog.ui
src/libgdu/: gduutils.c  meson.build
src/notify/: gdusdmonitor.c  org.gnome.SettingsDaemon.DiskUtilityNotify.desktop.in
